# python-cluster

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  INSTALL  MANIFEST.in  Pipfile  README  README.rst  cluster.py  clusterTests.py  fabfile.py  pyproject.toml  pytest.ini  setup.py  test.py  th27.txt  th35.txt  tox.ini
.github/workflows/: pythonpackage.yml
cluster/: __init__.py  cluster.py  linkage.py  matrix.py  util.py  version.txt
cluster/cluster_method/: hierarchical.py
cluster/method/: base.py  hierarchical.py  kmeans.py
cluster/test/: test_cluster.py  test_hierarchical.py  test_linkage.py
docs/: Makefile  changelog.rst  conf.py  hierarchical.rst  index.rst
docs/apidoc/: cluster.matrix.rst  cluster.method.base.rst  cluster.method.hierarchical.rst  cluster.method.kmeans.rst  cluster.rst  cluster.util.rst
